tests/ui/issues/issue-13407.stderr
error[E0603]: unit struct `C` is private
  --> $DIR/issue-13407.rs:6:8
   |
LL |     A::C = 1;
   |        ^ private unit struct
   |
note: the unit struct `C` is defined here
  --> $DIR/issue-13407.rs:2:5
   |
LL |     struct C;
   |     ^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-13407.rs:6:5
   |
LL |     struct C;
   |     -------- unit struct defined here
...
LL |     A::C = 1;
   |     ^^^^   - this expression has type `{integer}`
   |     |
   |     expected integer, found `C`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0603.
For more information about an error, try `rustc --explain E0308`.
